--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DownloadManager"
         tools:targetApi="31">
+
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.activity.Main"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.DownloadManager">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
