--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,12 @@ dependencies {
     // compose material3
     implementation 'androidx.compose.material3:material3:1.1.0-alpha04'
 
+    // compose viewmodel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+
+    // compose hilt navigation
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
     // lifecycle
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
 
